test/error/MainNotStatic.fu
public class Test
{
	public void Main() //ERROR: 'Main' method must be 'public static'
	{
	}
}

